[tool.poetry]
name = "8ball"
version = "0.1.0"
description = ""
authors = ["celeste drummond <parafactual@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.15.2"
pyai21 = {git = "https://github.com/ckoshka/pyai21"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
